RESOLVED FIXED19585
Call frames for eval program code are incorrectly labeled "(anonymous function)"
https://bugs.webkit.org/show_bug.cgi?id=19585
Summary Call frames for eval program code are incorrectly labeled "(anonymous function)"
Timothy Hatcher
Reported 2008-06-16 09:51:19 PDT
Call frames for eval program code are incorrectly labeled "(anonymous function)" and should be labeled "(program)". Also the first call frame can also be labeled incorrectly for event listeners or callback functions that are anonymous functions.
Attachments
Proposed patch (15.30 KB, patch)
2008-06-16 11:33 PDT, Timothy Hatcher
timothy: review+
Timothy Hatcher
Comment 1 2008-06-16 09:51:32 PDT
I have a fix for this.
Timothy Hatcher
Comment 2 2008-06-16 11:33:26 PDT
Created attachment 21735 [details] Proposed patch
Timothy Hatcher
Comment 3 2008-06-17 09:52:36 PDT
Comment on attachment 21735 [details] Proposed patch Geoff Garen reviewed this in person.
Timothy Hatcher
Comment 4 2008-06-17 15:36:17 PDT
Landed in r34634.
Note You need to log in before you can comment on or make changes to this bug.