Use accurate call frame title's based on the call frame type. Added a type to DebuggerCallFrame so the under interface can distinguish anonymous functions and program call frames.

JavaScriptCore:

2008-06-16  Timothy Hatcher  <timothy@apple.com>

        Added a type to DebuggerCallFrame so the under interface can
        distinguish anonymous functions and program call frames.

        https://bugs.webkit.org/show_bug.cgi?id=19585

        Reviewed by Geoff Garen.

        * JavaScriptCore.exp: Export the DebuggerCallFrame::type symbol.
        * kjs/DebuggerCallFrame.cpp:
        (KJS::DebuggerCallFrame::type): Added.
        * kjs/DebuggerCallFrame.h:

WebCore:

2008-06-16  Timothy Hatcher  <timothy@apple.com>

        Use accurate call frame title's based on the call frame type.

        https://bugs.webkit.org/show_bug.cgi?id=19585

        Reviewed by Geoff Garen.

        * English.lproj/localizedStrings.js: Updated strings.
        * bindings/js/JSJavaScriptCallFrameCustom.cpp:
        (WebCore::JSJavaScriptCallFrame::evaluate): Removed the isValid()
        check since the evaluate() functiondoes the check already.
        (WebCore::JSJavaScriptCallFrame::thisObject): Removed the isValid()
        check, since thisObject() does the check and returns null if invalid.
        (WebCore::JSJavaScriptCallFrame::type): Return a string
        based on the enum value of the type.
        (WebCore::JSJavaScriptCallFrame::scopeChain): Removed the isValid()
        check, since scopeChain() does the check and returns null if invalid.
        So just null check scopeChain().
        * page/JavaScriptCallFrame.cpp:
        (WebCore::JavaScriptCallFrame::type): Return the DebuggerCallFrame::Type.
        Return DebuggerCallFrame::UnknownType if the call frame is invalid.
        * page/JavaScriptCallFrame.h:
        * page/JavaScriptCallFrame.idl: Add the type property.
        * page/inspector/CallStackSidebarPane.js:
        (WebInspector.CallStackSidebarPane.prototype.update): Check the type
        of the call frame to create the correct title.
        * page/inspector/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype._addScriptToFilesMenu): Use the
        "(program)" title for the file menu to match the call frames.


Canonical link: https://commits.webkit.org/27082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34634 268f45cc-cd09-0410-ab3c-d52691b4dbfc