WebCore/page/JavaScriptCallFrame.h
@@ -57,6 +57,7 @@ namespace WebCore {
         }
 
         String functionName() const;
+        KJS::DebuggerCallFrame::Type type() const;
         const KJS::ScopeChainNode* scopeChain() const;
 
         KJS::JSObject* thisObject() const;
